--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ DebianDockerTemplate
 DebianTemplate
 UbuntuDocker
 *.vhdx
+AlpineTemplate
+Caddy/caddy_2.6.4_windows_amd64.zip
+Caddy/caddy.zip
+Caddy/caddy_2.6.4_windows_amd64/caddy.exe
+Caddy/caddy_2.6.4_windows_amd64/LICENSE
+Caddy/caddy_2.6.4_windows_amd64/README.md
